[gd_scene load_steps=5 format=3 uid="uid://bpkh0ugtnvhcg"]

[ext_resource type="Script" path="res://level/lvl_script.gd" id="1_j6i8l"]
[ext_resource type="PackedScene" uid="uid://d0vnuvu4cneg5" path="res://player/player.tscn" id="1_wmj6j"]
[ext_resource type="AudioStream" uid="uid://c7hebbfntm8lk" path="res://audio/bgm_lvl_01.wav" id="2_a8u1u"]
[ext_resource type="PackedScene" uid="uid://bb21y5f4ty731" path="res://ui/ui_pause.tscn" id="4_lyory"]

[node name="Lvl01" type="Node" node_paths=PackedStringArray("bgm")]
script = ExtResource("1_j6i8l")
bgm = NodePath("Lvl01Bgm")

[node name="Player" parent="." instance=ExtResource("1_wmj6j")]
position = Vector2(960, 720)

[node name="Lvl01Bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a8u1u")

[node name="PauseUI" parent="." instance=ExtResource("4_lyory")]
visible = false

[node name="PauseButton" type="Button" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 253.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 50
text = "Pause"

[connection signal="restart" from="PauseUI" to="." method="_on_pause_ui_restart"]
[connection signal="resume" from="PauseUI" to="." method="_on_pause_ui_resume"]
[connection signal="return_to_menu" from="PauseUI" to="." method="_on_pause_ui_return_to_menu"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
